--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,15 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.8.0
+      # - image: circleci/node:7.8.0
+      - image: circleci/node:6-browsers
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
 
-    working_directory: ~/repo
+    # working_directory: ~/repo
 
     steps:
       - checkout
