--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,3 +36,8 @@ jobs:
         
       # run tests!
       - run: npm run circleci-test
+deployment:
+  prod:
+    branch: release
+    heroku:
+      appname: ryancrews-blog
