--- a/package.json
+++ b/package.json
@@ -18,29 +18,30 @@
     "npm": "5.6.0"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.4",
-    "@angular/cli": "1.6.5",
-    "@angular/common": "^5.2.4",
-    "@angular/compiler": "^5.2.4",
-    "@angular/compiler-cli": "^5.2.4",
-    "@angular/core": "^5.2.4",
-    "@angular/forms": "^5.2.4",
-    "@angular/http": "^5.2.4",
-    "@angular/platform-browser": "^5.2.4",
-    "@angular/platform-browser-dynamic": "^5.2.4",
-    "@angular/router": "^5.2.4",
+    "@angular/animations": "^7.0.4",
+    "@angular/common": "^7.0.4",
+    "@angular/compiler": "^7.0.4",
+    "@angular/compiler-cli": "^7.0.4",
+    "@angular/core": "^7.0.4",
+    "@angular/forms": "^7.0.4",
+    "@angular/http": "^7.0.4",
+    "@angular/platform-browser": "^7.0.4",
+    "@angular/platform-browser-dynamic": "^7.0.4",
+    "@angular/router": "^7.0.4",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
-    "rxjs": "^5.5.6",
-    "typescript": "~2.5.3",
-    "zone.js": "^0.8.19"
+    "rxjs": "^6.3.3",
+    "typescript": "~3.1.6",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/language-service": "^5.2.4",
+    "@angular-devkit/build-angular": "^0.10.6",
+    "@angular/cli": "^7.0.6",
+    "@angular/language-service": "^7.0.4",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.100",
-    "codelyzer": "^4.1.0",
+    "codelyzer": "^4.5.0",
     "enhanced-resolve": "^3.4.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -50,8 +51,8 @@
     "karma-coverage-istanbul-reporter": "^1.4.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
-    "tslint": "~5.9.1"
+    "tslint": "~5.11.0"
   }
 }
