--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build --prod",
+    "build": "ng build --configuration=production",
     "test": "ng test --code-coverage",
     "circleci-test": "ng test --single-run --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "postinstall": "ng build --aot --configuration=production"
   },
   "private": true,
   "engines": {
