--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "build": "ng build --configuration=production",
     "test": "ng test --code-coverage",
-    "circleci-test": "ng test --single-run --watch=false",
+    "circleci-test": "ng test --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot --configuration=production"
