--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
               "src/favicon.ico"
             ],
             "styles": [
+              "src/assets/stylesheets/resets.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -71,6 +72,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
             "styles": [
+              "src/assets/stylesheets/resets.scss",
               "src/styles.css"
             ],
             "assets": [
