--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build --configuration=production",
+    "build": "ng build --aot --configuration=production",
     "test": "ng test --code-coverage",
     "circleci-test": "ng test --watch=false",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot --configuration=production"
+    "e2e": "ng e2e"
   },
   "private": true,
   "engines": {
@@ -54,5 +53,6 @@
     "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.11.0"
-  }
+  },
+  "heroku-run-build-script": true
 }
